--- a/index.html
+++ b/index.html
@@ -11,26 +11,25 @@
     <div class="container">
 
         <table>
-
             <tr class="rojo">
                 <th>Edad</th>
                 <th>Peso</th>
             </tr>
-
+        
             <tr>
-                <td>40</td>
-                <td>78</td>
+                <td class="dot">40</td>
+                <td class="dot">78</td>
             </tr>
 
             <tr>
-                <td>53</td>
-                <td>76</td>
+                <td class="dot">53</td>
+                <td class="dot">76</td>
             </tr>
 
             <tr>
-                <th>
+                <td colspan="2">
                     En el momento en que entiendo verdaderamnete a mi enemigo, en el momento en que le entiendo lo suficientemente bien como para derrotarle, entonces, en ese preciso instante, tambien le quiero.
-                </th>
+                </td>
             </tr>
 
 
